--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,10 @@ node_js:
 jdk:
 - oraclejdk8
 
+before_install:
+- curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.1.0
+- export PATH=$HOME/.yarn/bin:$PATH
+
 script:
 - yarn run lint
 - yarn run package
